CR4 - Fix double scrollbar

--- a/src/Video.css
+++ b/src/Video.css
@@ -39,7 +39,7 @@ body {
 }
 .message-container {
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     height: 400px;
     text-align: left;
   }
